--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +12,6 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "crypto-js": "^4.2.0",
-    "express": "^4.21.2",
-    "netlify-hash-form": "file:"
+    "express": "^4.21.2"
   }
 }
